# payment-system-backend

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
database/: schema.dbml
docker/: entrypoint.sh  node-api.Dockerfile  python-service.Dockerfile
node-api/: eslint.config.mjs  jest.application.config.cjs  jest.config.cjs  jest.domain.config.cjs  jest.e2e.live.config.cjs  jest.infrastructure.config.cjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
node-api/prisma/: schema.prisma
node-api/scripts/: idempotency-concurrency.ts
node-api/src/: main.ts
node-api/test/: setup.e2e.ts  setup.integration.ts
node-api/test/e2e/: auth.e2e.test.ts  cards.e2e.test.ts  docs.e2e.test.ts  health.e2e.test.ts  payments.e2e.test.ts  security.e2e.test.ts  users.e2e.test.ts
python-service/: .coverage  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python-service/app/: __init__.py  main.py
python-service/app/application/: ports.py  process_payment_use_case.py  process_payment_use_case_test.py
python-service/app/domain/: __init__.py  processing_decision.py  processing_decision_test.py  value_objects.py  value_objects_test.py
python-service/app/infrastructure/: seeded_random.py  seeded_random_test.py
python-service/app/interfaces/: api.py  api_test.py  error_mapper.py  schemas.py
python-service/app/shared/: config.py  config_test.py
python-service/tests/: conftest.py
(+146 files in other folders)
