[project]
name = "payment-system-python-service"
version = "0.1.0"
description = "Payment processor microservice — FastAPI"
requires-python = ">=3.14"
readme = "README.md"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["app", "tests"]
pythonpath = ["."]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "app/**/api_test.py", "app/**/*_test.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  "app.interfaces",
  "app.application",
  "app.infrastructure",
  "app.domain",
]
containers = ["app"]
